<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GioHangActivity">

    <TextView
        android:id="@+id/tv_giohang"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/gio_hang_trong"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_giohang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#36DD07"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Giỏ hàng" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_giohang"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/toolbar_giohang" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@id/btn_giohang">

        <TextView
            android:id="@+id/tv_tong_thanh_toan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/tong_thanh_toan"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_gia_thanh_toan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/thanh_toan"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_giohang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mua_hang"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>