<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="5dp"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_img_adidas"
            android:layout_weight="3"
            android:src="@drawable/new_img"
            android:layout_width="0dp"
            android:layout_height="100dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/tv_name_adidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_adidas"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_price_adidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_adidas"
                android:textSize="15sp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_note_adidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_adidas"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>