<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChiTietActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chi_tiet"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3AD541"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Chi tiết sản phẩm">

        <FrameLayout
            android:id="@+id/gio_hang_click"
            android:layout_width="55dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp">

            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_shopping_cart_24" />

        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ln_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar_chi_tiet">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/img_chi_tiet"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/new_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ten_san_pham"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/gia_san_pham"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spn_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/spinner" />

            <Button
                android:id="@+id/btn_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/them_vao"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln_layout_1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/mo_ta"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_mota_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textSize="15sp" />

        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>